# sensorkit-monitor

./: .gitignore  LICENSE  config.py  pyproject.toml  sensorkit-monitor.py
api/: metrics.py
examples/: config.yaml  sensorkit-monitor.service
utils/: sm-service.bash
